feat: reestructuracion modular y cableado 1 a 1 de los 100 Casos de Uso Reales (MOD-01 a MOD-10)